Bump dependencies and small refactor