@@ -1,5 +1,5 @@
 /*
- * Copyright 2021-2023 Moros
+ * Copyright 2021-2024 Moros
  *
  * This file is part of Hermes.
  *
@@ -24,69 +24,88 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
 import java.util.PropertyResourceBundle;
 import java.util.ResourceBundle;
-import java.util.Set;
-import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import me.moros.hermes.util.Debounced;
 import net.kyori.adventure.key.Key;
+import net.kyori.adventure.text.TranslatableComponent;
 import net.kyori.adventure.translation.GlobalTranslator;
 import net.kyori.adventure.translation.TranslationRegistry;
 import net.kyori.adventure.translation.Translator;
 import net.kyori.adventure.util.UTF8ResourceBundleControl;
 import org.slf4j.Logger;
+import org.spongepowered.configurate.reference.WatchServiceListener;
 
-public final class TranslationManager {
-  public static final Locale DEFAULT_LOCALE = Locale.ENGLISH;
+/**
+ * TranslationManager loads localized strings and adds them to a {@link TranslationRegistry} that can be used
+ * to create {@link TranslatableComponent}.
+ * @see Message
+ */
+public final class TranslationManager implements Iterable<Locale> {
+  private static final String PATH = "hermes.lang.messages_en";
 
   private final Logger logger;
-  private final Set<Locale> installed = ConcurrentHashMap.newKeySet();
   private final Path translationsDirectory;
-  private TranslationRegistry registry;
+  private final AtomicReference<ForwardingTranslationRegistry> registryReference;
+  private final Debounced<?> buffer;
 
-  public TranslationManager(Logger logger, String directory) {
+  public TranslationManager(Logger logger, Path directory, WatchServiceListener listener) throws IOException {
     this.logger = logger;
-    translationsDirectory = Paths.get(directory, "translations");
-    reload();
-  }
-
-  public void reload() {
-    if (registry != null) {
-      GlobalTranslator.translator().removeSource(registry);
-      installed.clear();
-    }
-    registry = TranslationRegistry.create(Key.key("hermes", "translations"));
-    registry.defaultLocale(DEFAULT_LOCALE);
-
-    loadCustom();
-
-    ResourceBundle bundle = ResourceBundle.getBundle("hermes", DEFAULT_LOCALE, UTF8ResourceBundleControl.get());
-    registry.registerAll(DEFAULT_LOCALE, bundle, false);
+    this.translationsDirectory = Files.createDirectories(directory.resolve("translations"));
+    var registry = createRegistry();
+    this.registryReference = new AtomicReference<>(registry);
     GlobalTranslator.translator().addSource(registry);
+    this.buffer = Debounced.create(this::reload, 2, TimeUnit.SECONDS);
+    listener.listenToDirectory(translationsDirectory, e -> buffer.request());
   }
 
-  private void loadCustom() {
+  private void reload() {
+    var newRegistry = createRegistry();
+    var old = registryReference.getAndSet(newRegistry);
+    GlobalTranslator.translator().removeSource(old);
+    GlobalTranslator.translator().addSource(newRegistry);
+    int amount = newRegistry.locales().size();
+    if (amount > 0) {
+      String translations = newRegistry.locales().stream().map(Locale::getLanguage)
+        .collect(Collectors.joining(", ", "[", "]"));
+      logger.info(String.format("Loaded %d translations: %s", amount, translations));
+    }
+  }
+
+  private ForwardingTranslationRegistry createRegistry() {
+    var registry = new ForwardingTranslationRegistry(Key.key("hermes", "translations"));
+    registry.defaultLocale(Message.DEFAULT_LOCALE);
+    loadCustom(registry);
+    loadDefaults(registry);
+    return registry;
+  }
+
+  private void loadDefaults(TranslationRegistry registry) {
+    ResourceBundle bundle = ResourceBundle.getBundle(PATH, Message.DEFAULT_LOCALE, UTF8ResourceBundleControl.get());
+    registry.registerAll(Message.DEFAULT_LOCALE, bundle, false);
+  }
+
+  private void loadCustom(TranslationRegistry registry) {
     Collection<Path> files;
     try (Stream<Path> stream = Files.list(translationsDirectory)) {
-      files = stream.filter(this::isValidPropertyFile).collect(Collectors.toList());
+      files = stream.filter(this::isValidPropertyFile).toList();
     } catch (IOException e) {
       files = List.of();
     }
-    files.forEach(this::loadTranslationFile);
-    int amount = installed.size();
-    if (amount > 0) {
-      String translations = installed.stream().map(Locale::getLanguage).collect(Collectors.joining(", ", "[", "]"));
-      logger.info("Loaded " + amount + " translations: " + translations);
-    }
+    files.forEach(f -> loadTranslationFile(f, registry));
   }
 
-  private void loadTranslationFile(Path path) {
+  private void loadTranslationFile(Path path, TranslationRegistry registry) {
     String localeString = removeFileExtension(path);
     Locale locale = Translator.parseLocale(localeString);
     if (locale == null) {
@@ -101,7 +120,6 @@ public final class TranslationManager {
       return;
     }
     registry.registerAll(locale, bundle, false);
-    installed.add(locale);
   }
 
   private boolean isValidPropertyFile(Path path) {
@@ -111,5 +129,10 @@ public final class TranslationManager {
   private String removeFileExtension(Path path) {
     String fileName = path.getFileName().toString();
     return fileName.substring(0, fileName.length() - ".properties".length());
+  }
+
+  @Override
+  public Iterator<Locale> iterator() {
+    return Collections.unmodifiableCollection(registryReference.get().locales()).iterator();
   }
 }
